# vschon

./: .~lock.Vschon_user_manual.docx#  Vschon_user_manual.docx  api_doc.html  doc.html  user_guide.html
API_doc/: Makefile
API_doc/source/: conf.py  conf.py~  index.rst
VA_PYTHON/: README.md  __init__.py
VA_PYTHON/backtest/: simulation_template.py
VA_PYTHON/backtest/hawkes/: .hawkes_backtest_template.py.swp  (+3 more)
VA_PYTHON/datamanage/: .truefx.py.swp  __init__.py  __init__.py~  datahandler.py  edgar.py  truefx.py
VA_PYTHON/feature/: __init__.py  featoperator.py  feature.py
VA_PYTHON/instructions/: Simulation process.doc  Simulation process.odt  simulator_archi.odg
VA_PYTHON/models/: .hawkes.py.swo  __init__.py
VA_PYTHON/performanceeval/: __init__.py  __init__.py~  criterion.txt  performanceeval.py
VA_PYTHON/scratch/: .eventhandle.py.swp  realtime_trading.py
VA_PYTHON/simulator/: .dataengine.py.swp  .ordermatcher.py.swp  .portfolioManager.py.swp  .simulator.py.swp  __init__.py  dataengine.py  ordermatcher.py  portfolioManager.py  simulator.py
VA_PYTHON/strategy/: .trader.py.swp  __init__.py  filter.py  trader.py
VA_PYTHON/utils/: __init__.py  utils.py
VD_DATABASE/: __init__.py  kdbAPI.py
VD_DATABASE/databaseManager/: __init__.py
VD_KDB/: .pyapi.py.swp  pyapi.py
VT_CPP/FXCM/: CMakeLists.txt
VT_CPP/FXCM/source/tools/: CMakeLists.txt  tools.cpp  tools_stdafx.cpp  tools_stdafx.h
VT_CPP/FXCM/source/tools/date/: date.cpp  date.h  strptime.cpp
VT_CPP/FXCM/source/tools/mutex/: Mutex.cpp  Mutex.h
VT_CPP/FXCM/source/tools/threading/: AThread.h  Interlocked.h  PosixCondVarWrapper.cpp  PosixCondVarWrapper.h  PosixThreadImpl.cpp  ThreadHandle.cpp  ThreadHandle.h
VT_CPP/FXCM/source/tools/tools_build/: CMakeCache.txt  Makefile  cmake_install.cmake
VT_CPP/FXCM/source/tools/win_emul/: CWinEventHandle.cpp  CWinEventHandle.h  hidden_class.h  winCRTsecure.cpp  winEmul.h  winevent.cpp
doc/source/: conf.py  installation.rst  models.rst  simulator.rst
user_guide/: Makefile
user_guide/source/: conf.py  data.rst  index.rst
(+93 files in other folders)
